--- a/style.css
+++ b/style.css
@@ -1,8 +1,44 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  background: #2d2d2d;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#clock {
+  width: 75vw;
+  height: 50vh;
+  background-color: #5e5e5e;
+  display: flex;
+  justify-content: space-around;
+}
+
+.tile {
+  background-color: #ff2929;
+  width: 100%;
+  height: 10px;
+}
+
+.huit {
+  width: 20%;
+  height: 100%;
+  background-color: aqua;
+}
+
+#points {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 50px;
+}
+
+.point {
+  background-color: #ff2929;
+  width: 50px;
+  height: 50px;
 }
