--- a/style.css
+++ b/style.css
@@ -21,13 +21,64 @@ body {
 .tile {
   background-color: #ff2929;
   width: 100%;
-  height: 10px;
+  height: 15px;
 }
 
 .huit {
   width: 20%;
   height: 100%;
   background-color: aqua;
+  position: relative;
+}
+
+.top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  clip-path: polygon(100% 0, 90% 100%, 10% 100%, 0 0);
+}
+
+.bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  clip-path: polygon(90% 0, 100% 100%, 0 100%, 10% 0);
+}
+
+.top-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50%;
+  width: 15px;
+  clip-path: polygon(100% 10%, 100% 90%, 0 100%, 0 0);
+}
+
+.top-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 50%;
+  width: 15px;
+  clip-path: polygon(100% 0, 100% 100%, 0 90%, 0 10%);
+}
+
+.bottom-left {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 50%;
+  width: 15px;
+  clip-path: polygon(100% 10%, 100% 90%, 0 100%, 0 0);
+}
+
+.bottom-right {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 50%;
+  width: 15px;
+  clip-path: polygon(100% 0, 100% 100%, 0 90%, 0 10%);
 }
 
 #points {
@@ -35,6 +86,13 @@ body {
   flex-direction: column;
   justify-content: center;
   row-gap: 50px;
+}
+
+.middle {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  clip-path: polygon(10% 0%, 90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%);
 }
 
 .point {
